Changed compatibility to java8